force-app/main/default/objects/Integration_Logs__c/fields/Request_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Correlation_Id__c</fullName>
    <label>Request Correlation Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>