force-app/main/default/objects/Integration_Logs__c/fields/Request_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Request_Endpoint__c</fullName>
    <label>Request Endpoint</label>
    <type>TextArea</type>
</CustomField>