force-app/main/default/objects/Integration_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status_Code__c</columns>
    <columns>Response_Body__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Request_Correlation_Id__c</columns>
    <columns>Request_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/12/2026 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>